--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -1,7 +1,9 @@
 .profile {
     img {
-        box-shadow: 0 0 5px $grey-color;
-        width: 100%;
+      /*box-shadow: 0 0 5px $grey-color;*/
+      margin-left: 40px;
+      margin-right: auto;
+      width: 250%;
     }
 }
 .address {
